# onnx2c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
examples/aww/: Makefile  benchmark_abyzft_scales.py  benchmark_runtime.py  compare_abyzft_baseline.py  kws_ref_model_full_float32_from_savedmodel.int8.qdq.onnx  kws_ref_model_full_float32_from_savedmodel.int8.qop.onnx  kws_ref_model_full_float32_from_savedmodel.onnx  mlperf_tiny_micro_kws_fp32.onnx  mlperf_tiny_micro_kws_int8.onnx  plot_abyzft_boxplot.py  plot_runtime_overhead.py  plot_sweep_results.py  plot_worst_case_drop.py  quantize_kws_onnx.py  run_generated.cpp  run_sweeps.sh  tiny_kws_ref_fp32.onnx  tiny_kws_ref_int8_qop.onnx
examples/model_benchmarks/: benchmark_all_models.py  plot_model_runtime_overheads.py  quantize_models_int8.py
fault_injection/: __init__.py  analyze_campaign.py  campaign_executor.py  campaign_generator.py  sweep_parser.py
src/: graph.cc  graph.h  graph_print.cc  main.cc  node.h  options.cc  options.h  tensor.cc  util.h
src/nodes/: abstractmatmul.cc  abstractmatmul.h  conv.h  convinteger.h  dequantizelinear.h  gemm.h  im2col.cc  im2col.h  matmul.cc  matmul.h  matmulinteger.h  qgemm.h  qlinearaveragepool.h  qlinearconv.h  qlinearmatmul.h  (+2 more)
test/: test_im2col.c  test_im2col_full.c
test/simple_networks/im2col/: CMakeLists.txt  benchmark_im2col.sh  conv_simple.onnx  conv_stride2.onnx  conv_with_bias.onnx  create_models.py  depthwise_conv.onnx  generate_benchmark_model.py  input.h  multi_channel_conv.onnx  multi_conv_bench.onnx  pointwise_conv.onnx  test_runner.c
(+22 files in other folders)
